# todoish-rust

./: Cargo.toml  README.md
migrations/: 20230719203647_create_table.down.sql  20230719203647_create_table.up.sql
src/: config.rs  lib.rs  main.rs
src/api/: rest.rs
src/tasks/: domain.rs  mod.rs  repository.rs
tests/: repository_tests.rs
