[package]
name = "todo-ish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tracing", "json", "macros"] }
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["macros", "tracing", "full"] }
tower = "0.4.13"
tracing = "0.1.37"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
