[package]
name = "todo-ish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = { version = "0.6.18", features = ["tracing", "json", "macros"] }
config = "0.13.3"
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.7.0", features = ["macros", "migrate", "bigdecimal", "json", "postgres", "uuid", "time", "runtime-tokio-rustls"] }
time = { version = "0.3.22", features = ["serde", "macros"] }
tokio = { version = "1.28.1", features = ["macros", "tracing", "full"] }
tokio-postgres = "0.7.8"
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
